[package]
name = "vsock"
version = "0.1.0"
authors = ["Stefano Garzarella <sgarzare@redhat.com>"]
edition = "2018"

[dependencies]
#nix = "0.14.0"
nix = { git = "https://github.com/nix-rust/nix" }
libc = { git = "https://github.com/rust-lang/libc", features = [ "extra_traits" ] }
errno = "0.2.4"
# Used by examples
clap = "2.33.0"
bytefmt = ""
serde = ""
serde_derive = ""
bincode = ""
