[package]
name = "vsock"
version = "0.1.0"
authors = ["Stefano Garzarella <sgarzare@redhat.com>"]
edition = "2018"

[dependencies]
nix = "0.15.0"
errno = "0.2.4"
# Used by examples
clap = "2.33.0"
bytefmt = ""
serde = ""
serde_derive = ""
bincode = ""

[dependencies.libc]
version = "0.2.59"
features = [ "extra_traits" ]
